2010-07-25  Juanma Barranquero  <lekktu@gmail.com>

	* terminfo.c (tparam): Fix prototype of tparm.

2010-07-25  Andreas Schwab  <schwab@linux-m68k.org>

	* emacs.c (main) [PROFILING]: Use __executable_start if defined to
	find start of text segment.
	* dispnew.c (safe_bcopy): Don't define if HAVE___EXECUTABLE_START
	is defined.

	* callproc.c (set_initial_environment): Avoid unbalanced braces.

2010-07-25  Ken Brown  <kbrown@cornell.edu>

	* vm-limit.c (check_memory_limits): Fix previous change;
	accidentally reverted an earlier change.

2010-07-25  Ken Brown  <kbrown@cornell.edu>

	* mem-limits.h (BSD4_2) [cygwin]: Don't define here; instead...
	* vm-limit.c: ...add 'defined (CYGWIN)' here (Bug#6715).

2010-07-25  Juanma Barranquero  <lekktu@gmail.com>

	* callproc.c (relocate_fd): Set inside #ifndef WINDOWSNT.
	* dired.c (opendir, readdir): Fix prototypes.
	* editfns.c (w32_get_internal_run_time): Fix prototypes.
	* keyboard.c (input_available_signal): Declare inside #ifdef SIGIO.
	* ndir.h (opendir, readdir, seekdir, closedir): Fix prototypes.
	(telldir): Remove declaration.
	* ralloc.c (real_morecore, __morecore): Fix prototypes.
	* sound.c (alsa_sound_perror): Declare inside #ifdef HAVE_ALSA.
	* syssignal.h (strsignal): Fix prototype.
	* term.c (tparam): Fix prototype.
	(term_get_fkeys_address, term_get_fkeys_kboard, term_get_fkeys_1)
	(term_get_fkeys): Set inside "#ifndef DOS_NT".
	* vm-limit.c (check_memory_limits): Fix prototypes of real_morecore
	and __morecore.
	* w32gui.h (XParseGeometry): Fix prototype.
	* w32heap.h (get_data_start, get_data_end, init_heap): Fix prototypes.
	* w32term.c (my_set_focus): Declare inside #if 0.
	* w32term.h (x_window_to_frame, x_display_info_for_name, w32_term_init)
	(w32_fill_rect, w32_clear_window, init_crit, delete_crit, signal_quit)
	(drain_message_queue, get_next_msg, post_msg, parse_button)
	(ClipboardSequence_Proc): Fix prototypes.
	(wait_for_sync): Remove declaration.
