@@ -1,3 +1,7 @@
+2010-07-26  Juanma Barranquero  <lekktu@gmail.com>
+
+	* lread.c (unreadpure, mapatoms_1): Make static.
+
 2010-07-25  Juanma Barranquero  <lekktu@gmail.com>
 
 	* terminfo.c (tparam): Fix prototype of tparm.
